[package]
name = "sixarm_assert"
version = "1.1.1"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2018"
description = "Assert macros for Rust tests. By SixArm.com."
readme = "README.md"
repository = "https://github.com/sixarm/sixarm-assert-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-only"
keywords = ["assert", "test", "compare"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

[dependencies]
